--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,71 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-#root {
-  h1 {
-    color: rgb(249, 152, 7);
+body {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(
+    to top,
+    #f3e7e9 0%,
+    #e3eeff 99%,
+    #e3eeff 100%
+  );
+  #root {
+    h1 {
+      padding-top: 20px;
+      color: rgb(250, 180, 193);
+    }
   }
 }
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 100%;
+  background-color: #223344;
+  color: #fff;
+  margin: auto;
+  font-size: 30px;
+}
+.mainPlace {
+  height: 400px;
+  background-color: #bedcfa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  font-size: 23px;
+}
+
+.btn {
+  margin-top: 50px;
+  display: inline-block;
+  border: none;
+  background-color: #b0b0b0;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  letter-spacing: 0.05rem;
+  font-weight: 700;
+  border-radius: 0.5rem;
+  font-size: 20px;
+  padding: 1.2rem 2.5rem;
+  &:hover {
+    background-color: #fff;
+    border: 1px solid #4d4d4d;
+    color: #223344;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+@import "./addform";
+@import "./list";
