change button styling & firebase init

--- a/src/styles/_addform.scss
+++ b/src/styles/_addform.scss
@@ -17,6 +17,7 @@
     background-color: #b0b0b0;
     width: 80px;
     height: 40px;
+    font-size: 18px;
     &:hover {
       border: 1px #585858 solid;
       background-color: #fff;
@@ -27,11 +28,14 @@
 }
 
 .options {
+  text-align: center;
+  font-size: 16px;
   cursor: pointer;
+  padding-left: 5px;
   margin-left: 50px;
   border: none;
   outline: none;
-  width: 120px;
+  width: 130px;
   height: 40px;
   background-color: #b0b0b0;
   border-radius: 0.5rem;
