--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -18,8 +18,10 @@
     border-radius: 0.5rem;
     width: 75px;
     height: 40px;
+    font-size: 17px;
   }
 }
+
 .complete {
   background-color: rgb(81, 158, 81);
   margin-right: 5px;
