--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,12 +5,7 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-body {
-  width: 100vw;
-  height: 100vh;
-  background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
-}
-body #root h1 {
+#root h1 {
   padding-top: 20px;
   color: rgb(250, 180, 193);
 }
@@ -38,7 +33,6 @@ body #root h1 {
 }
 
 .btn {
-  margin-top: 50px;
   display: inline-block;
   border: none;
   background-color: #b0b0b0;
@@ -49,13 +43,17 @@ body #root h1 {
   letter-spacing: 0.05rem;
   font-weight: 700;
   border-radius: 0.5rem;
-  font-size: 20px;
+  font-size: 25px;
   padding: 1.2rem 2.5rem;
 }
 .btn:hover {
   background-color: #fff;
   border: 1px solid #4d4d4d;
   color: #223344;
+}
+
+.btn-back {
+  margin-top: 25px;
 }
 
 .center {
@@ -82,6 +80,7 @@ body #root h1 {
   background-color: #b0b0b0;
   width: 80px;
   height: 40px;
+  font-size: 18px;
 }
 .searchBar button:hover {
   border: 1px #585858 solid;
@@ -91,11 +90,14 @@ body #root h1 {
 }
 
 .options {
+  text-align: center;
+  font-size: 16px;
   cursor: pointer;
+  padding-left: 5px;
   margin-left: 50px;
   border: none;
   outline: none;
-  width: 120px;
+  width: 130px;
   height: 40px;
   background-color: #b0b0b0;
   border-radius: 0.5rem;
@@ -129,6 +131,7 @@ body #root h1 {
   border-radius: 0.5rem;
   width: 75px;
   height: 40px;
+  font-size: 17px;
 }
 
 .complete {
