--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,19 +23,38 @@
   color: #fff;
   margin: auto;
   font-size: 30px;
-}
-.mainPlace {
-  height: 400px;
-  background-color: #bedcfa;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 30px;
-  font-size: 23px;
+}
+// .mainPlace {
+//   height: 400px;
+//   background-color: #bedcfa;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin-bottom: 30px;
+//   font-size: 23px;
+// }
+.signin {
+  margin: auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  .filled-basic {
+    margin-bottom: 10px;
+  }
+}
+
+.signup {
+  margin: auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .btn {
-  display: inline-block;
+  margin: 30px auto;
+  display: block;
+  width: max-content;
   border: none;
   background-color: #b0b0b0;
   color: white;
@@ -45,7 +64,7 @@
   letter-spacing: 0.05rem;
   font-weight: 700;
   border-radius: 0.5rem;
-  font-size: 25px;
+  font-size: 23px;
   padding: 1.2rem 2.5rem;
   &:hover {
     background-color: #fff;
